# jaguar

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: synthetic_joint_fit.py
notebooks/: 01_hsc_qso_joint_fit.ipynb  01_legacy_pox52_joint_fit.ipynb
src/jaguar/: __init__.py  bridge.py  config.py  detection.py  fit.py  grahspj.py  initialization.py  io.py  model.py  mplstyle.py  plotting.py  render.py  result.py
tests/: test_detection.py  test_fit.py  test_initialization.py  test_io.py  test_model.py  test_plotting.py  test_render.py
